# sales-forecasting-retail

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
data/processed/: df_prepared.csv  test.csv  train.csv
data/raw/: new_data.csv
models/: artifacts.pkl  encoder.pkl  history.csv  model.pkl  model_comparison.csv
outputs/: predictions.csv
scripts/: predict.py  train.py
src/configs/: config.py
src/data/: loader.py  preprocessing.py
src/evaluation/: metrics.py
src/features/: engineering.py
src/inference/: predictor.py
src/model/: evaluation.py  training.py
src/models/: trainer.py
