[project]
name = "sales-forecasting-retail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "jupyterlab>=4.5.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "pip-chill>=1.0.3",
    "polars>=1.37.1",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=3.1.3",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
