[project]
name = "sales-forecasting-retail"
version = "0.1.0"
description = "Sales forecasting pipeline by product and store for a 4-month horizon"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "joblib>=1.5.3",
    "lightgbm>=4.6.0",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "xgboost>=3.1.3",
]

[tool.setuptools.packages.find]
where = ["."]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
